# colab_tutorials

./: .gitignore  README.md  deploy_codellama_13B_tutorial.ipynb  pyproject.toml
.github/workflows/: colab-badge-update.yml
lecture1/: deploy_codellama_13B_tutorial.ipynb  evaluate_python_skills.ipynb  evaluate_python_skills_solution.ipynb
lecture11/: deploy_transformer_streamlit.py  rag_for_wiki.ipynb
lecture2/: first_ml_pipeline.ipynb  python_abcs.ipynb  python_abcs_solution.ipynb  python_xyzs.ipynb  python_xyzs_solution.ipynb
lecture3/: first_ml_pipeline.ipynb  intro_data.ipynb
lecture4/: HOME_balance_data_and_save.ipynb  HOME_balance_data_and_save_solution.ipynb  fingerprints.ipynb  outlier_detection.ipynb
lecture5/: AT_HOME_multi_dim_arrays.ipynb  step-by-step-linear-regression.ipynb
lecture5/solutions/: AT_HOME_multi_dim_arrays.ipynb
lecture6/: example_README.md
lecture7/: my_first_nn.ipynb
lecture8/: autoML.ipynb  neural_neworks.ipynb  prepare_for_hackathon.md
lecture9/: a_lovely_NN_in_pytorch.ipynb
lecture_hackathon2/: README.md
lecutre_hackathon1/: template_ml_computer_vision.ipynb  template_ml_regression.ipynb
