[project]
name = "colab_tutorials"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Christopher Kuenneth", email = "christopher.kuenneth@gmail.com"},
]
dependencies = [
    "transformers>=4.37.2",
    "torch>=2.2.0",
    "matplotlib>=3.8.2",
    "wikipedia-api>=0.6.0",
    "tensorflow>=2.15.0",
    "scikit-learn>=1.4.0",
    "lightning>=2.1.3",
    "google-generativeai>=0.3.2",
    "openai>=1.10.0",
    "streamlit>=1.30.0",
    "bitsandbytes>=0.42.0",
    "llama-index>=0.9.40",
    "ipykernel>=6.29.0",
    "ax-platform>=0.3.6",
    "nbformat>=5.9.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
